Fix overlap on footer

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -1,4 +1,4 @@
-$footer-height: 60px;
+$footer-height: 190px;
 
 html,
 body {
@@ -14,9 +14,9 @@ body {
   min-height: 100%;
   height: auto;
   /* Negative indent footer by its height */
-  margin: 0 auto -60px;
+  margin: 0 auto -$footer-height;
   /* Pad bottom by footer height */
-  padding: 0 0 60px;
+  padding: 0 0 $footer-height;
 }
 
 #footer a{
